--- a/Css/styles.css
+++ b/Css/styles.css
@@ -82,3 +82,107 @@ img {
 .mt-5{
     margin-top: 5rem;
 }
+
+/*Header*/
+
+.header{
+    min-height: 60rem;
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom center;
+    padding: 5rem 0;
+}
+
+@media (min-width: 768px){
+    .header{
+        padding: 2rem 0;
+    }
+}
+
+.contenido-header{
+    display: flex;
+    flex-direction: column;
+    height: calc(60rem - 4rem);
+    justify-content: space-between;
+    color: var(--blanco);
+}
+
+.nombre-sitio{
+    font-weight: 300;
+    text-align: center;
+    font-size: 3rem;
+}
+
+@media (min-width: 768px){
+    .nombre-sitio{
+        font-size: 5rem;
+    }
+}
+
+.nombre-sitio span{
+    font-weight: 900;
+}
+
+
+
+@media (min-width: 768px){
+    .barra{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.contacto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.telefono{
+    display: flex;
+}
+
+.telefono::before{
+    content: '';
+    display: block;
+    width: 4rem;
+    height: 4rem;
+    background-image: url(../img/telefono.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+@media (min-width: 768px){
+    .contacto{
+        align-items:flex-end;
+    }
+}
+
+.header a{
+    color: var(--blanco);
+    font-size: 2rem;
+}
+
+.navegacion{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width: 768px){
+    .navegacion{
+        display: flex;
+        flex-direction: row;
+    }
+}
+
+.navegacion a{
+    padding: 1rem 2rem;
+    transition: background-color .3s;
+}
+
+.navegacion a:hover{
+    background-color: rgb(255 255 255 / .5);
+}
