--- a/Css/styles.css
+++ b/Css/styles.css
@@ -30,6 +30,7 @@ h2,
 h3 {
     font-weight: 900;
     margin: 1rem 0 4rem 0;
+    line-height: 1.2;
 }
 
 h1 {
@@ -54,13 +55,13 @@ img {
     height: auto;
 }
 
-.contenedor{
+.contenedor {
     max-width: 120rem;
     margin: 0 auto;
     width: 90%;
 }
 
-.btn{
+.btn {
     color: var(--gris);
     background-color: var(--blanco);
     border: .1rem solid var(--gris);
@@ -68,24 +69,24 @@ img {
     transition: background-color .3s;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: var(--gris);
     color: var(--blanco);
 }
 
 /*Utilidades*/
 
-.text-center{
+.text-center {
     text-align: center;
 }
 
-.mt-5{
+.mt-5 {
     margin-top: 5rem;
 }
 
 /*Header*/
 
-.header{
+.header {
     min-height: 60rem;
     background-image: url(../img/hero.jpg);
     background-repeat: no-repeat;
@@ -94,13 +95,13 @@ img {
     padding: 5rem 0;
 }
 
-@media (min-width: 768px){
-    .header{
+@media (min-width: 768px) {
+    .header {
         padding: 2rem 0;
     }
 }
 
-.contenido-header{
+.contenido-header {
     display: flex;
     flex-direction: column;
     height: calc(60rem - 4rem);
@@ -108,43 +109,43 @@ img {
     color: var(--blanco);
 }
 
-.nombre-sitio{
+.nombre-sitio {
     font-weight: 300;
     text-align: center;
     font-size: 3rem;
 }
 
-@media (min-width: 768px){
-    .nombre-sitio{
+@media (min-width: 768px) {
+    .nombre-sitio {
         font-size: 5rem;
     }
 }
 
-.nombre-sitio span{
+.nombre-sitio span {
     font-weight: 900;
 }
 
 
 
-@media (min-width: 768px){
-    .barra{
+@media (min-width: 768px) {
+    .barra {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
 }
 
-.contacto{
+.contacto {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.telefono{
+.telefono {
     display: flex;
 }
 
-.telefono::before{
+.telefono::before {
     content: '';
     display: block;
     width: 4rem;
@@ -152,37 +153,265 @@ img {
     background-image: url(../img/telefono.png);
     background-repeat: no-repeat;
     background-position: center center;
+    margin-right: 1rem;
 }
 
-@media (min-width: 768px){
-    .contacto{
-        align-items:flex-end;
+@media (min-width: 768px) {
+    .contacto {
+        align-items: flex-end;
     }
 }
 
-.header a{
+.header a {
     color: var(--blanco);
     font-size: 2rem;
 }
 
-.navegacion{
+.navegacion {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    margin-top: 1rem;
 }
 
-@media (min-width: 768px){
-    .navegacion{
+@media (min-width: 768px) and (max-width: 1080px) {
+    .navegacion {
+        display: flex;
+        flex-direction: row wrap;
+    }
+}
+
+@media (min-width: 1081px) {
+    .navegacion {
         display: flex;
         flex-direction: row;
     }
 }
 
-.navegacion a{
-    padding: 1rem 2rem;
+
+
+.navegacion a {
+    padding: .5rem;
     transition: background-color .3s;
+    width: 100%;
+    text-align: center;
 }
 
-.navegacion a:hover{
+@media (min-width: 768px) {
+    .navegacion a {
+        padding: 1rem 2rem;
+    }
+}
+
+.navegacion a:hover {
     background-color: rgb(255 255 255 / .5);
+    color: var(--negro);
+}
+
+.slogan {
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .slogan {
+        text-align: right;
+    }
+
+    .slogan h1 {
+        font-size: 5rem;
+    }
+}
+
+.slogan h1 {
+    font-size: 3rem;
+    margin: 0;
+}
+
+.slogan p {
+    margin: 0;
+    line-height: 1;
+}
+
+/*Nosotros*/
+
+.nosotros {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    background-image: url(../img/nosotros.jpg);
+    background-repeat: no-repeat;
+    background-position: bottom center;
+}
+
+@media (min-width: 992px) {
+    .nosotros {
+        grid-template-columns: repeat(3, 1fr)
+    }
+}
+
+.contenido-nosotros {
+    background-color: var(--blanco);
+    padding: 5rem;
+}
+
+@media (min-width: 992px) {
+    .contenido-nosotros {
+        grid-column: 2/4
+    }
+}
+
+.contenido-nosotros h2,
+.contenido-nosotros p {
+    margin-bottom: 1rem;
+}
+
+/*Modelos*/
+.modelo {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    margin-bottom: 5rem;
+}
+
+.modelo:last-of-type {
+    margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+    .modelo {
+        grid-template-columns: repeat(2, 1fr)
+    }
+
+}
+
+.contenido-modelo {
+    padding: 5rem;
+    background-color: var(--blanco);
+}
+
+.basico {
+    background-image: url(../img/modelo_basico.jpg);
+}
+
+@media (min-width: 768px) {
+    .basico {
+        background-position: right top;
+    }
+
+    .basico .contenido-modelo {
+        grid-row: 2/3;
+        padding: 2rem 2rem 2rem 0;
+    }
+
+}
+
+.premier {
+    background-image: url(../img/modelo_premier.jpg);
+}
+
+@media (min-width: 768px) {
+    .premier {
+        background-position: bottom left;
+    }
+
+    .premier .contenido-modelo {
+        padding: 2rem;
+        grid-column: 2/3;
+    }
+}
+
+.elite {
+    background-image: url(../img/modelo_elite.jpg);
+}
+
+@media (min-width: 768px) {
+    .elite {
+        background-position: center right;
+        ;
+    }
+
+    .elite .contenido-modelo {
+        grid-column: 1/2;
+        padding: 2rem 2rem 2rem 0;
+    }
+}
+
+.galeria {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+@media (min-width: 768px) {
+    .galeria {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+.galeria img {
+    object-fit: cover;
+    height: 100%;
+}
+
+.galeria .imagen:nth-child(2) {
+    grid-column: 2/3;
+    grid-row: 1/3;
+}
+
+@media (min-width: 768px) {
+    .galeria .imagen:nth-child(2) {
+        grid-column: 1/2;
+        grid-row: 2/4;
+    }
+}
+
+.galeria .imagen:nth-child(3) {
+    grid-row: 3/5;
+    grid-column: 2/3;
+}
+
+@media (min-width: 768px) {
+    .galeria .imagen:nth-child(3) {
+        grid-row: 1/2;
+        grid-column: 2/3;
+    }
+
+}
+
+.galeria .imagen:nth-child(6) {
+    grid-row: 2/4;
+}
+
+@media (min-width: 768px) {
+
+    .galeria .imagen:nth-child(6) {
+        grid-row: 1/3;
+        grid-column: 3/4;
+    }
+}
+
+.footer{
+    height: 50rem;
+    background-image: url(../img/footer_bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    color: var(--blanco);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.footer a{
+    color: var(--blanco);
+    font-size: 2rem;
+}
+
+.copyright{
+    background-color: var(--negro);
+    text-align: center;
+    margin: 5rem 0 0 0;
+    font-size: 2rem;
+    padding: 1rem;
 }
